# xsubInsertion

./: CMakeLists.txt  README  config.h.cmake  version.cmake  xsub.conf  xsubInsertion.kdev4
.kdev4/: xsubInsertion.kdev4
src/: CMakeLists.txt  SubtitleEncoder.cpp  SubtitleEncoder.h  avi.cpp  avi.h  logger.cpp  logger.h  subtitle.cpp  subtitle.h  xsubInsertion.cpp
src/FreeType/: bitmapGlyph.h  font.cpp  font.h  glyph.cpp  glyph.h
